fitcycle-mysql-pv-deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: fitcycle-mysql
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: db
    spec:
      containers:
      - image: mysql:5.6
        name: fc-mysql
        ports:
        - containerPort: 3306
          name: fc-mysql
        volumeMounts:
        - name: fitcycle-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: fitcycle-persistent-storage
        persistentVolumeClaim:
          claimName: fc-mysql-pv-claim
