api-server-local-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-api
  labels:
    app: fitcycle
spec:
  ports:
    - name: http-fc
      protocol: TCP
      port: 5000
      nodePort: 30431
  selector:
    app: fitcycle
    tier: api
  type: NodePort
