api-server-local-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  labels:
    app: fitcycle
spec:
  ports:
    - port: 5000
      name: http-fc
  selector:
    app: fitcycle
    tier: api
  type: NodePort
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: api-server
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: api
    spec:
      volumes:
      - name: "fitcycle-apiserver-data"
        hostPath:
          path: "/var/lib/fitcycle-api-server"
      containers:
      - image: gcr.io/learning-containers-187204/fitcycle-api:latest
        name: api-server
        ports:
        - containerPort: 5000
          name: api-server
        volumeMounts:
        - mountPath: "/data"
          name: "fitcycle-apiserver-data"
