api-server-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-fitcycle
  labels:
    app: fitcycle
spec:
  ports:
    - port: 5000
      name: http-fc
  selector:
    app: fitcycle
    tier: app
  type: LoadBalancer
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: local-fitcycle
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: app
    spec:
      volumes:
      - name: "fitcycle-apiserver-data"
        hostPath:
          path: "/var/lib/fitcycle-api-server"
      containers:
      - image: gcr.io/learning-containers-187204/miniapi2:latest
        name: local-fitcycle
        ports:
        - containerPort: 5000
          name: local-fitcycle
        volumeMounts:
        - mountPath: "/data"
          name: "fitcycle-apiserver-data"
