fitcycle-mysql-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-mysql
  labels:
    app: fitcycle
spec:
  ports:
    - port: 3306
      name: http-fc-db
  selector:
    app: fitcycle
    tier: db
  clusterIP: None
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: fitcycle-mysql
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: db
    spec:
      containers:
      - image: mysql/mysql-server:latest
        name: fc-mysql
        ports:
        - containerPort: 3306
          name: fc-mysql
        volumeMounts:
        - name: fitcycle-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: fitcycle-persistent-storage
        persistentVolumeClaim:
          claimName: fc-mysql-pv-claim
