fitcycle-percona-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-mysql
  labels:
    app: fitcycle
spec:
  ports:
    - port: 3306
      name: http-fc-db
  selector:
    app: fitcycle
    tier: db
  clusterIP: None
