fitcycle-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-server
  labels:
    app: fitcycle
spec:
  ports:
    - port: 8000
      name: http-fc-web
      nodePort: 30440
  selector:
    app: fitcycle
    tier: app
  type: NodePort
