fitcycle-server-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-server
  labels:
    app: fitcycle
spec:
  ports:
    - port: 8000
      name: http-fc-web
  selector:
    app: fitcycle
    tier: app
  type: NodePort

---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: fitcycle-server
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: app
    spec:
      volumes:
      - name: varlog
        emptyDir: {}
      containers:
      - image: gcr.io/learning-containers-187204/fitcycle-server:latest
        name: fitcycle-server
        ports:
        - containerPort: 8000
          name: fitcycle-server
        volumeMounts:
        - name: varlog
          mountPath: /var/log
