fitcycle-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcycle-server
  labels:
    app: fitcycle
spec:
  ports:
    - port: 8000
      name: http-fc-web
  selector:
    app: fitcycle
    tier: app
  type: LoadBalancer

---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: fitcycle-server
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fitcycle
        tier: app
    spec:
      volumes:
      - name: "fitcycle-webserver-data"
        hostPath:
          path: "/var/lib/fitcycle-web-server"
      containers:
      - image: gcr.io/learning-containers-187204/fitcycle-alpine:latest
        name: fitcycle-server
        ports:
        - containerPort: 8000
          name: fitcycle-server
        volumeMounts:
        - mountPath: "/data"
          name: "fitcycle-webserver-data"
