mobile-server-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-server
  labels:
    app: fitcycle
spec:
  ports:
    - name: http-fcmobile
      protocol: TCP
      port: 5000
      nodePort: 30432
  selector:
    app: fitcycle
    tier: mobile
  type: NodePort
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: mobile-server
  labels:
    app: fitcycle
spec:
  selector:
    matchLabels:
      app: fitcycle
      tier: mobile
  strategy:
    type: Recreate
  replicas: 2
  template:
    metadata:
      labels:
        app: fitcycle
        tier: mobile
    spec:
      volumes:
      - name: fitcycle-mobileserver-data 
        emptyDir: {}
      containers:
      - image: gcr.io/learning-containers-187204/mobile-server:latest
        name: mobile-server
        ports:
        - containerPort: 5000
          name: mobile-server
        volumeMounts:
        - mountPath: "/data"
          name: "fitcycle-mobileserver-data"
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
